added game button

--- a/explore.html
+++ b/explore.html
@@ -63,6 +63,10 @@
                         <a class="navbutton" href="bucketlist.html">bucket list</a>
                         <div class="navbuttonfill"></div>
                     </div>
+                    <div class="navbutton-container">
+                        <a class="navbutton" href="https://laurandraaa.github.io/happybdaykevin/">24th bday game</a>
+                        <div class="navbuttonfill"></div>
+                    </div>
                 </div>
 
             </div>
