--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p class="hearts five">&hearts;</p>
                 <p class="hearts six">&hearts;</p>
             </div>
-            <h1>have an incredible day at work !!!!</h1>
+            <h1>have an incredible day at school !!!!</h1>
         </div>
 
         <div class="illustration">
